--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <h1>Welcome to Your Dollar Tree</h1>
-    <p>Ye aapka personal Dollar Tree MLM system hai. Yahan se aap apna network build kar sakte hain!</p>
+    <p>This is your own Dollar Tree. Fulfill your dreams now!</p>
     
     <!-- Buttons for future pages -->
     <a href="register.html" class="btn">Register</a>
