--- a/index.html
+++ b/index.html
@@ -1,41 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Your Dollar Tree</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f4f4f4;
-            padding: 50px;
-        }
-        h1 {
-            color: #333;
-        }
-        p {
-            font-size: 18px;
-        }
-        .btn {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            margin: 10px;
-        }
-        .btn:hover {
-            background-color: #45a049;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Doller Tree Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f9f9f9;
+    }
+    header {
+      background: #4CAF50;
+      color: white;
+      padding: 10px 20px;
+      text-align: center;
+    }
+    header img {
+      width: 80px; /* Adjusted the size to fit better */
+      vertical-align: middle;
+    }
+    header h1 {
+      display: inline;
+      margin-left: 10px;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      background: #333;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      padding: 10px 20px;
+    }
+    nav a:hover {
+      background: #575757;
+    }
+    section {
+      padding: 20px;
+    }
+    .welcome {
+      text-align: center;
+      margin: 20px 0;
+      padding: 20px;
+      background: #f0f0f0;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+    .welcome h2 {
+      color: #4CAF50;
+      font-weight: bold;
+    }
+    footer {
+      background: #333;
+      color: white;
+      text-align: center;
+      padding: 10px 0;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
-    <h1>Welcome to Your Dollar Tree</h1>
+  <!-- Header Section -->
+  <header>
+    <!-- Replace the URL with the GitHub URL of your logo -->
+    <img src="https://github.com/your-username/your-repository-name/raw/main/logo.png" alt="Tree Logo">
+    <h1>Doller Tree Network</h1>
+  </header>
+
+  <!-- Navigation Menu -->
+  <nav>
+    <a href="#join">Join</a>
+    <a href="#member">Member</a>
+    <a href="#plan">Plan</a>
+    <a href="#settings">Settings</a>
+    <a href="#support">Support</a>
+  </nav>
+
+  <!-- Welcome Note Section -->
+  <section class="welcome">
+    <h2><b>Welcome to Your Dollar Tree</b></h2>
     <p>This is your own Dollar Tree. Fulfill your dreams now!</p>
-    
-    <!-- Buttons for future pages -->
-    <a href="register.html" class="btn">Register</a>
-    <a href="dashboard.html" class="btn">Dashboard</a>
+  </section>
+
+  <!-- Footer Section -->
+  <footer>
+    <p>&copy; 2024 Doller Tree Network. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
