--- a/index.html
+++ b/index.html
@@ -1,95 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Doller Tree Website</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f9f9f9;
-    }
-    header {
-      background: #4CAF50;
-      color: white;
-      padding: 10px 20px;
-      text-align: center;
-    }
-    header img {
-      width: 80px; /* Adjusted the size to fit better */
-      vertical-align: middle;
-    }
-    header h1 {
-      display: inline;
-      margin-left: 10px;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background: #333;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      padding: 10px 20px;
-    }
-    nav a:hover {
-      background: #575757;
-    }
-    section {
-      padding: 20px;
-    }
-    .welcome {
-      text-align: center;
-      margin: 20px 0;
-      padding: 20px;
-      background: #f0f0f0;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    .welcome h2 {
-      color: #4CAF50;
-      font-weight: bold;
-    }
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 10px 0;
-      position: relative;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Doller Tree</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f8ff;
+            text-align: center;
+        }
+
+        /* Header Section */
+        header {
+            background-color: #4CAF50;
+            padding: 20px;
+            color: white;
+        }
+
+        h1 {
+            font-size: 36px;
+            margin: 0;
+        }
+
+        p {
+            font-size: 20px;
+            margin: 10px 0;
+        }
+
+        /* Logo Section */
+        .logo-container {
+            position: relative;
+            margin-top: 30px;
+            width: 300px;
+            height: 300px;
+            margin: auto;
+        }
+
+        .logo-container img {
+            width: 100%;
+            height: auto;
+        }
+
+        .tree-logo {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 200px;
+            height: auto;
+        }
+
+        .watering-man {
+            position: absolute;
+            top: 120px;
+            left: 100px;
+            width: 50px;
+            height: auto;
+        }
+
+        /* Navigation Buttons */
+        .nav-buttons {
+            margin-top: 30px;
+        }
+
+        .nav-buttons button {
+            font-size: 18px;
+            padding: 15px 30px;
+            margin: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .nav-buttons button:hover {
+            background-color: #45a049;
+        }
+
+        /* Footer Section */
+        footer {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-  <!-- Header Section -->
-  <header>
-    <!-- Replace the URL with the GitHub URL of your logo -->
-    <img src="https://github.com/your-username/your-repository-name/raw/main/logo.png" alt="Tree Logo">
-    <h1>Doller Tree Network</h1>
-  </header>
 
-  <!-- Navigation Menu -->
-  <nav>
-    <a href="#join">Join</a>
-    <a href="#member">Member</a>
-    <a href="#plan">Plan</a>
-    <a href="#settings">Settings</a>
-    <a href="#support">Support</a>
-  </nav>
+    <!-- Header Section -->
+    <header>
+        <h1>Welcome to Doller Tree</h1>
+        <p>This is your own doller tree, fulfill your dreams now.</p>
+    </header>
 
-  <!-- Welcome Note Section -->
-  <section class="welcome">
-    <h2><b>Welcome to Your Dollar Tree</b></h2>
-    <p>This is your own Dollar Tree. Fulfill your dreams now!</p>
-  </section>
+    <!-- Logo Section -->
+    <div class="logo-container">
+        <img class="tree-logo" src="tree_logo.png" alt="Doller Tree Logo"> <!-- Replace with your tree logo image -->
+        <img class="watering-man" src="watering_man.png" alt="Man watering tree with coins"> <!-- Replace with your watering man image -->
+    </div>
 
-  <!-- Footer Section -->
-  <footer>
-    <p>&copy; 2024 Doller Tree Network. All Rights Reserved.</p>
-  </footer>
+    <!-- Navigation Buttons -->
+    <div class="nav-buttons">
+        <button>Join</button>
+        <button>Member</button>
+        <button>Plan</button>
+        <button>Support</button>
+        <button>Setting</button>
+    </div>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Doller Tree. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
