--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
             margin: 0;
             padding: 0;
             background-color: #f0f8ff;
-            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            position: relative;
         }
 
         /* Header Section */
@@ -18,6 +22,10 @@
             background-color: #4CAF50;
             padding: 20px;
             color: white;
+            text-align: center;
+            position: absolute;
+            top: 20px;
+            width: 100%;
         }
 
         h1 {
@@ -33,10 +41,8 @@
         /* Logo Section */
         .logo-container {
             position: relative;
-            margin-top: 30px;
-            width: 300px;
-            height: 300px;
-            margin: auto;
+            width: 500px;
+            height: 500px;
         }
 
         .logo-container img {
@@ -49,7 +55,7 @@
             top: 0;
             left: 50%;
             transform: translateX(-50%);
-            width: 200px;
+            width: 300px;
             height: auto;
         }
 
@@ -63,19 +69,25 @@
 
         /* Navigation Buttons */
         .nav-buttons {
-            margin-top: 30px;
+            position: absolute;
+            top: 100px;
+            right: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .nav-buttons button {
             font-size: 18px;
             padding: 15px 30px;
-            margin: 10px;
+            margin: 10px 0;
             background-color: #4CAF50;
             color: white;
             border: none;
             cursor: pointer;
             border-radius: 5px;
             transition: background-color 0.3s;
+            width: 200px;
         }
 
         .nav-buttons button:hover {
@@ -90,6 +102,7 @@
             position: absolute;
             bottom: 0;
             width: 100%;
+            text-align: center;
         }
     </style>
 </head>
