--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             position: relative;
         }
 
-        /* Header Section */
+        /* Header Section (Welcome Note Hidden) */
         header {
             background-color: #4CAF50;
             padding: 20px;
@@ -26,6 +26,7 @@
             position: absolute;
             top: 20px;
             width: 100%;
+            visibility: hidden; /* Welcome note hidden */
         }
 
         h1 {
@@ -43,6 +44,7 @@
             position: relative;
             width: 500px;
             height: 500px;
+            margin-top: 50px; /* Added space to prevent overlap with header */
         }
 
         .logo-container img {
@@ -70,7 +72,7 @@
         /* Navigation Buttons */
         .nav-buttons {
             position: absolute;
-            top: 100px;
+            top: 300px; /* Adjusted position of buttons */
             right: 20px;
             display: flex;
             flex-direction: column;
@@ -108,7 +110,7 @@
 </head>
 <body>
 
-    <!-- Header Section -->
+    <!-- Header Section (Welcome Note) -->
     <header>
         <h1>Welcome to Doller Tree</h1>
         <p>This is your own doller tree, fulfill your dreams now.</p>
@@ -116,7 +118,7 @@
 
     <!-- Logo Section -->
     <div class="logo-container">
-        <img class="tree-logo" src="tree_logo.png" alt="Doller Tree Logo"> <!-- Replace with your tree logo image -->
+        <img class="tree-logo" src="tree_logo.jpg" alt="Doller Tree Logo"> <!-- Replace with your JPG logo image -->
         <img class="watering-man" src="watering_man.png" alt="Man watering tree with coins"> <!-- Replace with your watering man image -->
     </div>
 
