--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             position: relative;
         }
 
-        /* Header Section (Welcome Note Hidden) */
+        /* Header Section (Welcome Note) */
         header {
             background-color: #4CAF50;
             padding: 20px;
@@ -26,7 +26,6 @@
             position: absolute;
             top: 20px;
             width: 100%;
-            visibility: hidden; /* Welcome note hidden */
         }
 
         h1 {
@@ -44,7 +43,7 @@
             position: relative;
             width: 500px;
             height: 500px;
-            margin-top: 50px; /* Added space to prevent overlap with header */
+            margin-top: 80px; /* Increased space to move the logo lower */
         }
 
         .logo-container img {
@@ -72,7 +71,7 @@
         /* Navigation Buttons */
         .nav-buttons {
             position: absolute;
-            top: 300px; /* Adjusted position of buttons */
+            top: 500px; /* Adjusted position of buttons to be lower */
             right: 20px;
             display: flex;
             flex-direction: column;
