--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             text-align: center;
             margin: 20px 0;
         }
-        .buttons button {
+        .buttons a {
             font-size: 1em;
             padding: 10px 20px;
             margin: 10px;
             background-color: #4caf50;
             color: white;
-            border: none;
+            text-decoration: none;
             border-radius: 5px;
-            cursor: pointer;
+            display: inline-block;
         }
-        .buttons button:hover {
+        .buttons a:hover {
             background-color: #45a049;
         }
         h2 {
@@ -126,8 +126,8 @@
 
     <div class="container">
         <div class="buttons">
-            <button>Join</button>
-            <button>Member</button>
+            <a href="join.html" class="btn">Join</a>
+            <a href="member.html" class="btn">Member</a>
         </div>
 
         <h2>Plan Overview</h2>
