--- a/join.html
+++ b/join.html
@@ -83,7 +83,7 @@
             projectId: "doller-tree-4434d",
             storageBucket: "doller-tree-4434d.appspot.com",
             messagingSenderId: "308263906273",
-            appId: "1:308263906273:web:your-app-id"
+            appId: "1:308263906273:web:060be293712c9a1fcf00a0"  // सही appId यहाँ डाला गया है
         };
 
         // Initialize Firebase
